Fixed contact us button on mobile

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
   --shadow: #555555;
   --pink: #ee959e;
   --blue: #7f8de2;
-  --green: #77DD77;
+  --green: #77dd77;
 }
 
 html * {
@@ -123,7 +123,6 @@ html * {
 
 .summary-body {
   padding: 20px;
-  text-align: left;
 }
 
 .summary-title {
@@ -268,6 +267,12 @@ button:active {
     padding: 0;
     width: 70vw;
     height: 8vh;
+  }
+  .rainbow, .contact-us-button {
+    font-size: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .summary-container {
     margin-left: 30vw;
